added ast transformations

--- a/by-feature/src/main/resources/templates/home/index.html
+++ b/by-feature/src/main/resources/templates/home/index.html
@@ -1,3 +1,4 @@
+<!-- Extensao do layout src/main/resources/templates/layouts/simple.html -->
 {% extends "layouts/simple" %}
 
 {% block title %} Home {% endblock %}
