added ast transformations, v2

--- a/by-feature/src/main/resources/templates/home/index.html
+++ b/by-feature/src/main/resources/templates/home/index.html
@@ -477,17 +477,22 @@
         <td>$112,000</td>
     </tr>
     </tbody>
-    <tfoot>
-    <tr>
-        <th>Name</th>
-        <th>Position</th>
-        <th>Office</th>
-        <th>Age</th>
-        <th>Start date</th>
-        <th>Salary</th>
-    </tr>
-    </tfoot>
+<!--    <tfoot>-->
+<!--    <tr>-->
+<!--        <th>Name</th>-->
+<!--        <th>Position</th>-->
+<!--        <th>Office</th>-->
+<!--        <th>Age</th>-->
+<!--        <th>Start date</th>-->
+<!--        <th>Salary</th>-->
+<!--    </tr>-->
+<!--    </tfoot>-->
 </table>
 
 {% endblock %}
 
+{% block js_initialization %}
+
+    console.log ("Hi !")
+
+{% endblock %}
